[gd_scene load_steps=28 format=2]

[ext_resource path="res://src/blocks/dialogue_block.gd" type="Script" id=1]
[ext_resource path="res://sprites/icons/unfilled_circle_thick.png" type="Texture" id=2]
[ext_resource path="res://themes/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://fonts/poppins_bold_megasize.tres" type="DynamicFont" id=4]
[ext_resource path="res://sprites/icons/trash_small.png" type="Texture" id=5]
[ext_resource path="res://sprites/icons/trash_open_small.png" type="Texture" id=6]
[ext_resource path="res://src/title_bar_button_hover.gd" type="Script" id=7]
[ext_resource path="res://fonts/lato_20.tres" type="DynamicFont" id=8]
[ext_resource path="res://fonts/lato_27.tres" type="DynamicFont" id=9]
[ext_resource path="res://sprites/dialogue/dialoguebox.png" type="Texture" id=10]
[ext_resource path="res://fonts/hack_largeish.tres" type="DynamicFont" id=11]
[ext_resource path="res://sprites/icons/connector_small_unfilled.png" type="Texture" id=12]
[ext_resource path="res://snd/boop2.ogg" type="AudioStream" id=13]
[ext_resource path="res://src/random_pitch_sound.gd" type="Script" id=14]
[ext_resource path="res://src/blocks/dialogue_block_line_draw.gd" type="Script" id=15]


[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0625, 0.0625, 0.0625, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="Animation" id=9]
length = 0.12
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("NinePatchRect:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0.00392157, 0 ) ]
}

[sub_resource type="Animation" id=10]
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("NinePatchRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.0999999, 7.45058e-009, 0.05, 0.1 ),
"transitions": PoolRealArray( 1.6245, 1, 1.7411, 9.84916 ),
"update": 0,
"values": [ Color( 87.22, 79.89, 93.88, 1 ), Color( 4, 4, 4, 1 ), Color( 2, 2, 2, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NinePatchRect/TitleBar:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -1.11759e-008, 0.1, 0.13 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0.313726, 0.803765, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 688.238, 120.374 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 379.341, 39.333 )

[node name="TitleBlock" type="Control" groups=[
"title_block",
]]
use_parent_material = true
script = ExtResource( 1 )
node_type = 2

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -688.0
margin_top = -14.0
margin_right = 685.0
margin_bottom = 114.0
focus_mode = 1
mouse_filter = 1
size_flags_vertical = 3
region_rect = Rect2( 0, 0, 256, 256 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="TitleBar" type="Control" parent="NinePatchRect"]
anchor_right = 1.0

[node name="HeadConnector" type="TextureButton" parent="NinePatchRect/TitleBar"]
visible = false
modulate = Color( 0.333333, 0.333333, 0.333333, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -12.0
margin_top = 5.0
margin_right = 8.0
margin_bottom = 25.0
mouse_filter = 2
disabled = true
texture_normal = ExtResource( 2 )
expand = true

[node name="DraggableSegment" type="Button" parent="NinePatchRect/TitleBar"]
modulate = Color( 1, 1, 1, 0.603922 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 37.0
focus_mode = 0
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
action_mode = 0
enabled_focus_mode = 0

[node name="Id_Label" type="LineEdit" parent="NinePatchRect/TitleBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -210.0
margin_bottom = -30.0
focus_mode = 1
theme = ExtResource( 3 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
max_length = 20
focus_mode = 1
context_menu_enabled = false
placeholder_text = "Title"
caret_blink = true

[node name="DeleteButton" type="TextureButton" parent="NinePatchRect"]
modulate = Color( 0.639216, 0.639216, 0.639216, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -28.0
margin_top = 5.0
margin_right = -4.0
margin_bottom = 29.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )
expand = true
script = ExtResource( 7 )

[node name="Dialogue" type="Control" parent="NinePatchRect"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -158.0
margin_top = 37.0
margin_right = 158.0
margin_bottom = 147.0

[node name="CharacterLineEdit" type="LineEdit" parent="NinePatchRect/Dialogue"]
margin_left = -200.0
margin_top = 17.0
margin_right = -55.0
margin_bottom = 42.0
focus_next = NodePath("../DialogueRichTextLabel/LineEdit")
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 8 )
max_length = 20
editable = false
expand_to_text_length = true
context_menu_enabled = false
caret_blink = true

[node name="DialogueRichTextLabel" type="RichTextLabel" parent="NinePatchRect/Dialogue"]
margin_left = -191.0
margin_top = 60.0
margin_right = 503.0
margin_bottom = 132.0
rect_clip_content = false
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 9 )
bbcode_enabled = true
scroll_active = false

[node name="DialogueBoxSprite" type="Sprite" parent="NinePatchRect/Dialogue"]
position = Vector2( 156, 84.4253 )
texture = ExtResource( 10 )

[node name="DialogueTextEdit" type="TextEdit" parent="NinePatchRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 206.0
margin_right = -13.0
margin_bottom = -40.0
focus_previous = NodePath("../../CharacterLineEdit")
focus_mode = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 11 )
custom_constants/line_spacing = 0
readonly = true
context_menu_enabled = false
wrap_enabled = true
caret_blink = true

[node name="TailConnector" type="TextureButton" parent="NinePatchRect"]
visible = false
modulate = Color( 1, 1, 1, 0.321569 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -14.0
margin_top = -28.0
margin_right = 10.0
margin_bottom = -4.0
mouse_filter = 1
disabled = true
action_mode = 0
texture_normal = ExtResource( 12 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/kill = SubResource( 9 )
anims/spawn = SubResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -8.0
autoplay = true
script = ExtResource( 14 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -0.00610352, -13.4355 )
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -89.2594 )
shape = SubResource( 11 )

[node name="LineDrawNode" type="Node2D" parent="."]
visible = false
position = Vector2( 0, 310 )
z_index = 4
script = ExtResource( 15 )

[node name="HeadArea2D" type="Area2D" parent="."]
visible = false
position = Vector2( -10, 7.626 )
priority = 13.0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadArea2D"]
position = Vector2( 10.0826, 32.2122 )
shape = SubResource( 12 )
disabled = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 59.5003, -103.134 )
scale = Vector2( 75.4943, 12.9001 )

[connection signal="mouse_entered" from="NinePatchRect/TitleBar/DraggableSegment" to="." method="_on_DraggableSegment_mouse_entered"]
[connection signal="mouse_exited" from="NinePatchRect/TitleBar/DraggableSegment" to="." method="_on_DraggableSegment_mouse_exited"]
[connection signal="pressed" from="NinePatchRect/TitleBar/DraggableSegment" to="." method="_on_DraggableSegment_pressed"]
[connection signal="focus_exited" from="NinePatchRect/TitleBar/Id_Label" to="." method="_on_Id_Label_focus_exited"]
[connection signal="text_changed" from="NinePatchRect/TitleBar/Id_Label" to="." method="_on_Id_Label_text_changed"]
[connection signal="text_entered" from="NinePatchRect/TitleBar/Id_Label" to="." method="_on_Id_Label_text_entered"]
[connection signal="button_down" from="NinePatchRect/DeleteButton" to="." method="_on_DeleteButton_button_down"]
[connection signal="pressed" from="NinePatchRect/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="text_changed" from="NinePatchRect/Dialogue/CharacterLineEdit" to="." method="_on_CharacterLineEdit_text_changed"]
[connection signal="button_down" from="NinePatchRect/TailConnector" to="." method="_on_TailConnector_button_down"]
[connection signal="button_up" from="NinePatchRect/TailConnector" to="." method="_on_TailConnector_button_up"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
